--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,3 +33,35 @@ jobs:
 
     - name: buildAction
       run: ./build.sh
+
+    - name: Get china_ip_list.txt
+      run: curl -LR -o dist/china_ip_list.txt "https://raw.githubusercontent.com/17mon/china_ip_list/master/china_ip_list.txt"
+
+    - name: Transform china_ip_list to MaxMind mmdb
+      run: |
+        cd dist
+        ./ipip2mmdb -s ./china_ip_list.txt -d Country.mmdb
+
+    - name: Set env variables
+      run: |
+        echo "::set-env name=RELEASE_NAME::Released on $(date +%Y%m%d)"
+        echo "::set-env name=TAG_NAME::$(date +%Y%m%d)"
+      shell: bash
+
+    - name: Generate version file
+        run: |
+          cd dist
+          echo $TAG_NAME > version
+
+    - name: Release and upload
+      uses: softprops/action-gh-release@v1
+      with:
+        name: ${{ env.RELEASE_NAME }}
+        tag_name: ${{ env.TAG_NAME }}
+        draft: false
+        prerelease: false
+        files: |
+          ./dist/version
+          ./dist/Country.mmdb
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
