fix cron-release.yml and disable push in commit-release.yml

--- a/.github/workflows/commit-release.yml
+++ b/.github/workflows/commit-release.yml
@@ -1,8 +1,8 @@
 name: commit-release
 
 on:
-  push:
-    branches: [ master ]
+#  push:
+#    branches: [ master ]
   pull_request:
     branches: [ master ]
 
