fix authentication fail issue

--- a/.github/workflows/cron-release.yml
+++ b/.github/workflows/cron-release.yml
@@ -64,5 +64,5 @@ jobs:
           git checkout -b release
           git add .
           git commit -m "${{ env.RELEASE_NAME }}"
-          git remote add origin "https://${{ github.actor }}:${{ secrets.PERSONAL_TOKEN }}@github.com/${{ github.repository }}"
+          git remote add origin "https://${{ github.actor }}:${{ secrets.CRON_RELEASE_WORKFLOW }}@github.com/${{ github.repository }}"
           git push -f -u origin release
