--- a/.github/workflows/cron-release.yml
+++ b/.github/workflows/cron-release.yml
@@ -1,8 +1,8 @@
 name: Cron Release
 
 on:
-  push:
-    branches: [ master ]
+#  push:
+#    branches: [ master ]
   schedule:
     - cron: 0 0 20 * *
 
